# twisted

./: .gitignore  ADMIN_SETTINGS_PLAN.md  AGENTS.md  CHANGES_TIMELINE.md  CLAUDE.md  GEMINI.md  Package.swift  README.md  RULES.md  SESSION.md  TASKLIST.md  docker-compose.yml  google.md  high_cpu_incident_report.md  kchat.txt  main.py  nginx.conf  orgaNICE_v3_one_shot_prompt.md  pyproject.toml  requirements.txt  setup.sh  simple_test.py  test_backend.py  test_case_alfa_corp.txt  test_chunk.py  test_loop.py  test_router.py  verify_swarm.py
TWISTED-FRONTEND-NEW/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
TWISTED-FRONTEND-NEW/src/: App.tsx  index.css
agents/context_analyzer/: IDENTITY.md  SKILLS.md  SOUL.md
agents/final_reviewer/: IDENTITY.md  SKILLS.md  SOUL.md
agents/legal_advisor/: IDENTITY.md  SKILLS.md  SOUL.md
agents/strategist/: IDENTITY.md  SKILLS.md  SOUL.md
backend/: .env.example  Dockerfile  config.py  heartbeat.py  logging_config.py  main.py
backend/agents/: base_agent.py  context_analyzer.py  debate_engine.py  final_reviewer.py  legal_advisor.py  self_improvement.py  strategist.py  swarm.py  tool_user.py
backend/audio/: live_audio_gateway.py
backend/config/: settings.py
backend/enrichment/: __init__.py  browser_use_client.py  deep_research.py  mcp_client.py  notebooklm_client.py  research_orchestrator.py  router.py  web_search.py
frontend/: index.html  package-lock.json  package.json
scripts/: omega_browser_use.py  omega_loop.sh  omega_nightshift.sh  omega_tester.py
(+125 files in other folders)
